--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: it
-on: [push]
+name: ci
+on: [push, pull_request]
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,3 +18,8 @@ jobs:
         go get -v -t -d ./...
     - name: Build
       run: go build -v .
+    - name: Release # not ready yet
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
