--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,22 @@ jobs:
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+    - name: Cache deps
+      uses: actions/cache@v1
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+      id: cache-deps
     - name: Get dependencies
+      if: steps.cache-deps.outputs.cache-hit != 'true'
       run: |
         go get -v -t -d ./...
     - name: Build
       run: go build -v .
+    - name: Test
+      run: go test ./...
     - name: Release # not ready yet
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
