--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 *.dll
 *.so
 *.dylib
+*.wasm
 
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# go std js
+wasm_exec.js
